// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isFullScreen 1`] = `
<div
  className="mapScaleControl mapScaleControlFullScreen"
  style={
    Object {
      "borderBottomColor": "#000000",
      "borderLeftColor": "#000000",
      "color": "#000000",
      "width": "62.7474245034397px",
    }
  }
>
  ~50 km
</div>
`;

exports[`render 1`] = `
<div
  className="mapScaleControl"
  style={
    Object {
      "borderBottomColor": "#000000",
      "borderLeftColor": "#000000",
      "color": "#000000",
      "width": "62.7474245034397px",
    }
  }
>
  ~50 km
</div>
`;
